working on card

--- a/index.html
+++ b/index.html
@@ -10,22 +10,24 @@
       href="images/favicon-32x32.png"
       type="image/x-icon"
     />
+    <link rel="stylesheet" href="/styles/style.css" />
   </head>
   <body>
     <main>
       <!-- Card -->
-      <article class="cardBody">
+      <article class="card">
         <div class="card__image"></div>
         <div class="card__information">
           <h1 class="card__heading">
-            Get <span>insights</span> that help your business grow.
+            Get <span class="card__heading--span">insights</span> that help your
+            business grow.
           </h1>
           <p class="card__paragraph">
             Discover the benefits of data analytics and make better decisions
             regarding revenue, customer experience, and overall efficiency.
           </p>
           <div class="card__stats">
-            <p class="card__statsNumber">10k+</p>
+            <p class="card__statsNumber">10k+<br /><span>Text</span></p>
             <p class="card__statsNumber">314</p>
             <p class="card__statsNumber">12M+</p>
             <p class="card__statsText"></p>
